# sensors-microcontrollers-25-26

./: .gitignore  README.md  docker-compose.yaml
gyroscope/: .cproject  gyroscope.ioc  main.c
gyroscope/Core/Src/: main.c  stm32g4xx_hal_msp.c
gyroscope/Debug/: makefile  objects.list
houston/: Dockerfile  README.md  RFD-reader.py  app.py  database.db  globals.py  requirements.txt  serial-reader.py
houston/scripts/: startup.sh
houston/static/: buttons.js  download.js  errors.js  graph-dropdowns.js  graphs.js  max-graph.js  style.css  table.js
houston/templates/: SD.html  index.html  max-graph.html
houston/test/: database-feeder.py  serial-demo.py  serial-feeder.py
onboard-rpi/: Dockerfile  README.md  setup.sh
onboard-rpi/display/Frontend/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
onboard-rpi/display/backend/: canBasic.c  can_data_reader.cpp  can_data_reader.h  can_data_reader_qt_bridge.h  can_log.db  can_reader  receiver.py
onboard-rpi/racingDisplay/: .start_system.sh.swp  requirements.txt
onboard-rpi/racingDisplay/config/: globals.py
onboard-rpi/racingDisplay/core/: can_getter.py  can_processor.py  can_processor.py.bak  debug_can.py  orion_bms_decoder.py
onboard-rpi/racingDisplay/display/: dashboard.qml  qml_display.py
onboard-rpi/racingDisplay/scripts/: setup_can.sh  start_dual_display.sh  start_on_boot.sh  start_system.sh  (+3 more)
stm/: README.md
stm/.metadata/: .log4j2.xml  version.ini
stm/Buzzer_Testing/: .cproject  .mxproject  .project  Buzzer_Testing.ioc
stm/RadioFilesFolder/: Radio_Reading.ioc
stm/can_activity/: receive.c  transmit.c
stm/can_demo/: Sample.ioc  main.c
stm/can_with_PCB/: .project
stm/first_tx_testing/: .cproject  first_tx_testing.ioc
stm/flowrate/: flowsensor.ioc  main.c
stm/motor_controller/: main.c
stm/nucleo_CAN/: .cproject  .mxproject  .project  nucleo_CAN Debug.launch  nucleo_CAN.ioc
stm/printf_test/: .cproject  .mxproject  test.ioc
stm/radio_stm/: .cproject  .mxproject  .project  radio_stm.ioc
(+367 files in other folders)
